# teacher-manager-app

./: .env.example  .gitignore  DEPLOYMENT.md  Git_commands.txt  PROGRESS.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
scripts/: check_requirements.ps1
static/: manifest.json  service-worker.js
static/css/: style.css
templates/: base.html  index.html
tests/: __init__.py  conftest.py  test_auth.py  test_health.py
